<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="187dp"
        android:text="Nuevo (User)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_apellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_direccion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtApellido"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <EditText
        android:id="@+id/txtUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/hint_ubicacion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtDireccion"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_telefono"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/txtUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/txtUbicacion" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/btnSiguiente"
        app:layout_constraintEnd_toEndOf="@+id/txtIdentificacion"
        app:layout_constraintTop_toBottomOf="@+id/txtIdentificacion" />

    <EditText
        android:id="@+id/txtFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_fechaNacimiento"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtTelefono"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <EditText
        android:id="@+id/txtIdentificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_identificacion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtFechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaNacimiento" />

</androidx.constraintlayout.widget.ConstraintLayout>