<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreAgregarProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kisspng_computer_icons_scalable_vector_graphics_symbol_cli_plus_sign_5aaad88d6ee9a1_3132124515211459974543"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtAgregarProducto"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="51dp"
        android:autoText="false"
        android:text="@string/txt_agregarProductoTitulo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreAgregarProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAgregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_agregarProducto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtCategoriaProducto"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_categoriaProducto"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPrecioProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreAgregarProducto"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtStockProducto"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_stockProducto1"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionProducto" />

    <EditText
        android:id="@+id/txtStockDisponibilidades"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/switch_disponibilidadProducto1"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionProducto" />

    <EditText
        android:id="@+id/txtPrecioProducto"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hint_precioProducto"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDescripcionProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoriaProducto" />

    <EditText
        android:id="@+id/txtNombreAgregarProducto"
        android:layout_width="171dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_nombreProducto1"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCategoriaProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtDescripcionProducto"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/hint_descripcionProducto1"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtStockProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecioProducto" />

</androidx.constraintlayout.widget.ConstraintLayout>